metadata-sfdx/force-app/main/default/objects/LiveText__Conversation_Event__c/LiveText__Conversation_Event__c.object-meta.xml
<CustomObject>
    <label>Conversation Event</label>
    <nameField>
        <label>Conversation Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversation Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>