metadata-sfdx/force-app/main/default/objects/LiveText__Conversation_Event__c/fields/LiveText__Conversation_Header__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Conversation_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Text Session Header</label>
    <referenceTo>LiveText__Conversation_Header__c</referenceTo>
    <relationshipLabel>Conversation Events</relationshipLabel>
    <relationshipName>Conversation_Events</relationshipName>
    <type>Lookup</type>
</CustomField>