metadata-sfdx/force-app/main/default/objects/LiveText__Conversation_Event__c/fields/LiveText__Event__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Event__c</fullName>
    <label>Event</label>
    <length>18</length>
    <type>Text</type>
</CustomField>