metadata-sfdx/force-app/main/default/objects/LiveText__Conversation_Event__c/fields/LiveText__Linked_Object__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Linked_Object__c</fullName>
    <label>Linked_Object</label>
    <length>18</length>
    <type>Text</type>
</CustomField>